# pytexas-discord-bot

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: check.yml
src/pytexbot/: __main__.py  conference_info.py  conference_info.toml  constants.py  handlers.py  hardware.py  main.py  schedule_data.py  schedule_logic.py
tests/: test_welcome.py
