[build-system]
requires = ["setuptools >= 63.1.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pytexbot"
description = ""
readme = ""
# do something better here...make version dynamic
version = "0.0.0"
# requires-python = ""
# license = ""
# classifiers = [

# ]
dependencies = [
    "discord.py",
    "python-dotenv",
    "requests"
]

[tool.setuptools.package-data]
pytexbot = ["conference_info.toml"]
# dynamic = []

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "pytest-asyncio",
]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
pytexbot-cli = "pytexbot.main:cli_main"
